fix(ListBox): change ListBox z-index higher than modal

--- a/packages/components/src/globals/scss/_layout.scss
+++ b/packages/components/src/globals/scss/_layout.scss
@@ -12,9 +12,9 @@
 /// @type Map
 /// @group global-layout
 $z-indexes: (
+  dropdown: 9100,
   modal: 9000,
   overlay: 6000,
-  dropdown: 6000,
   header: 8000,
   footer: 5000,
   hidden: - 1,
